Refactor test structure and improve coverage
Refactored ClientServiceTest, LoginServiceTest, ProductReviewServiceTest, ShippingServiceTest, and TodoServiceTest to use nested classes, BaseTest, and specific exception assertions.
Added comprehensive validation tests including Triple Loop tests for batch endpoints.
Fixed bugs in service implementations regarding validation and filtering.