@@ -1,16 +1,20 @@
 package com.example.SpringApi.Services.Tests;
 
+import com.example.SpringApi.FilterQueryBuilder.UserLogFilterQueryBuilder;
 import com.example.SpringApi.Models.DatabaseModels.UserLog;
-import com.example.SpringApi.Models.RequestModels.UserLogsRequestModel;
 import com.example.SpringApi.Models.RequestModels.PaginationBaseRequestModel;
+import com.example.SpringApi.Models.RequestModels.UserLogsRequestModel;
 import com.example.SpringApi.Models.ResponseModels.PaginationBaseResponseModel;
 import com.example.SpringApi.Models.ResponseModels.UserLogsResponseModel;
 import com.example.SpringApi.Repositories.UserLogRepository;
 import com.example.SpringApi.Services.UserLogService;
+import com.example.SpringApi.Exceptions.BadRequestException;
+import com.example.SpringApi.ErrorMessages;
 import jakarta.servlet.http.HttpServletRequest;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
@@ -18,6 +22,7 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 
 import java.time.LocalDateTime;
 import java.util.*;
@@ -25,10 +30,6 @@ import java.util.*;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
-
-import org.mockito.MockedStatic;
-import org.springframework.security.core.context.SecurityContext;
-import org.springframework.security.core.context.SecurityContextHolder;
 
 /**
  * Unit tests for UserLogService.
@@ -46,18 +47,17 @@ import org.springframework.security.core.context.SecurityContextHolder;
  * All external dependencies are properly mocked to ensure test isolation.
  * 
  * @author SpringApi Team
- * @version 1.0
- * @since 2024-01-15
+ * @version 2.0
  */
 @ExtendWith(MockitoExtension.class)
 @DisplayName("UserLogService Unit Tests")
-class UserLogServiceTest {
+class UserLogServiceTest extends BaseTest {
 
     @Mock
     private UserLogRepository userLogRepository;
 
     @Mock
-    private com.example.SpringApi.FilterQueryBuilder.UserLogFilterQueryBuilder userLogFilterQueryBuilder;
+    private UserLogFilterQueryBuilder userLogFilterQueryBuilder;
 
     @Mock
     private HttpServletRequest request;
@@ -67,7 +67,6 @@ class UserLogServiceTest {
 
     private UserLog testUserLog;
     private UserLogsRequestModel testUserLogsRequest;
-    private static final Long TEST_USER_ID = 1L;
     private static final Long TEST_CARRIER_ID = 100L;
     private static final String TEST_CHANGE = "User Login";
     private static final String TEST_OLD_VALUE = "old_value";
@@ -81,14 +80,14 @@ class UserLogServiceTest {
     @BeforeEach
     void setUp() {
         // Initialize test user log using constructor
-        testUserLog = new UserLog(TEST_USER_ID, TEST_CARRIER_ID, TEST_CHANGE, TEST_OLD_VALUE, TEST_NEW_VALUE, "admin");
+        testUserLog = new UserLog(DEFAULT_USER_ID, TEST_CARRIER_ID, TEST_CHANGE, TEST_OLD_VALUE, TEST_NEW_VALUE, DEFAULT_CREATED_USER);
         testUserLog.setLogId(1L);
         testUserLog.setCreatedAt(LocalDateTime.now());
         testUserLog.setUpdatedAt(LocalDateTime.now());
 
         // Initialize test user logs request model
         testUserLogsRequest = new UserLogsRequestModel();
-        testUserLogsRequest.setUserId(TEST_USER_ID);
+        testUserLogsRequest.setUserId(DEFAULT_USER_ID);
         testUserLogsRequest.setCarrierId(TEST_CARRIER_ID);
         testUserLogsRequest.setStart(0);
         testUserLogsRequest.setEnd(10);
@@ -103,175 +102,110 @@ class UserLogServiceTest {
         // Setup common mock behaviors with lenient mocking for JWT authentication
         lenient().when(request.getHeader("Authorization")).thenReturn("Bearer test-token");
 
-        // Mock UserLogService directly without authentication issues
-        // Note: We avoid mocking getUserId() to prevent type conflicts
+        // Mock BaseService behavior
+        lenient().doReturn(DEFAULT_CLIENT_ID).when(userLogService).getClientId();
+        lenient().doReturn(DEFAULT_USER_ID).when(userLogService).getUserId();
+        lenient().doReturn(DEFAULT_LOGIN_NAME).when(userLogService).getUser();
     }
 
-    // ==================== Log Data with String User and Change/Old/New Values
-    // Tests ====================
+    // ==================== Log Data Tests ====================
 
-    /**
-     * Test successful logging with string user ID and all values.
-     * Verifies that user log is created and saved with proper validation.
-     */
-    @Test
-    @DisplayName("Log Data - Success - With long user and all values")
-    void logData_Success_LongUserWithAllValues() {
-        // Arrange
-        when(userLogRepository.save(any(UserLog.class))).thenReturn(testUserLog);
+    @Nested
+    @DisplayName("logData Tests")
+    class LogDataTests {
 
-        // Act
-        Boolean result = userLogService.logData(TEST_USER_ID, TEST_CHANGE, TEST_OLD_VALUE, TEST_NEW_VALUE);
+        /**
+         * Test successful logging with user ID and all values.
+         */
+        @Test
+        @DisplayName("Log Data - Success - All Values")
+        void logData_Success_AllValues() {
+            // Arrange
+            when(userLogRepository.save(any(UserLog.class))).thenReturn(testUserLog);
 
-        // Assert
-        assertTrue(result);
-        verify(userLogRepository, times(1)).save(any(UserLog.class));
-    }
-
-    // ==================== Log Data with Long User and Endpoint Tests
-    // ====================
-
-    /**
-     * Test successful logging with long user ID and endpoint.
-     * Verifies that user log is created with audit user ID when current user is
-     * available.
-     */
-    @Test
-    @DisplayName("Log Data - Success - With long user and endpoint")
-    void logData_Success_LongUserWithEndpoint() {
-        // Arrange
-        when(userLogRepository.save(any(UserLog.class))).thenReturn(testUserLog);
-
-        // Act
-        Boolean result = userLogService.logData(TEST_USER_ID, TEST_NEW_VALUE, TEST_ENDPOINT);
-
-        // Assert
-        assertTrue(result);
-        verify(userLogRepository, times(1)).save(any(UserLog.class));
-    }
-
-    /**
-     * Test logging with long user ID and endpoint when no current user.
-     * Verifies that audit user ID is set to the log user ID when current user is
-     * null.
-     */
-    @Test
-    @DisplayName("Log Data - Success - Long user ID with no authentication uses default user")
-    void logData_Success_LongUserWithEndpoint_NoAuthentication() {
-        // Arrange - Mock no authentication context and no Authorization header
-        try (MockedStatic<SecurityContextHolder> mockStatic = mockStatic(SecurityContextHolder.class)) {
-            SecurityContext mockSecurityContext = mock(SecurityContext.class);
-            when(mockSecurityContext.getAuthentication()).thenReturn(null);
-            mockStatic.when(SecurityContextHolder::getContext).thenReturn(mockSecurityContext);
-
-            // Remove Authorization header to trigger default user scenario
-            lenient().when(request.getHeader("Authorization")).thenReturn(null);
-
-            // Act - This should now succeed with default user "admin"
-            boolean result = userLogService.logData(TEST_USER_ID, TEST_NEW_VALUE, TEST_ENDPOINT);
+            // Act
+            Boolean result = userLogService.logData(DEFAULT_USER_ID, TEST_CHANGE, TEST_OLD_VALUE, TEST_NEW_VALUE);
 
             // Assert
             assertTrue(result);
             verify(userLogRepository, times(1)).save(any(UserLog.class));
         }
+
+        /**
+         * Test successful logging with user ID and endpoint.
+         */
+        @Test
+        @DisplayName("Log Data - Success - With Endpoint")
+        void logData_Success_WithEndpoint() {
+            // Arrange
+            when(userLogRepository.save(any(UserLog.class))).thenReturn(testUserLog);
+
+            // Act
+            Boolean result = userLogService.logData(DEFAULT_USER_ID, TEST_NEW_VALUE, TEST_ENDPOINT);
+
+            // Assert
+            assertTrue(result);
+            verify(userLogRepository, times(1)).save(any(UserLog.class));
+        }
+
+        /**
+         * Test log data with null endpoint.
+         */
+        @Test
+        @DisplayName("Log Data - Success - Null Endpoint")
+        void logData_Success_NullEndpoint() {
+            // Arrange
+            when(userLogRepository.save(any(UserLog.class))).thenReturn(testUserLog);
+
+            // Act
+            boolean result = userLogService.logData(DEFAULT_USER_ID, TEST_CHANGE, null);
+
+            // Assert
+            assertTrue(result);
+            verify(userLogRepository).save(any(UserLog.class));
+        }
+
+        /**
+         * Test log data with explicit context.
+         */
+        @Test
+        @DisplayName("Log Data - Success - With Explicit Context")
+        void logDataWithContext_Success() {
+            // Arrange
+            when(userLogRepository.save(any(UserLog.class))).thenReturn(testUserLog);
+
+            // Act
+            boolean result = userLogService.logDataWithContext(DEFAULT_USER_ID, DEFAULT_LOGIN_NAME, DEFAULT_CLIENT_ID, TEST_NEW_VALUE, TEST_ENDPOINT);
+
+            // Assert
+            assertTrue(result);
+            verify(userLogRepository).save(any(UserLog.class));
+        }
     }
 
     // ==================== Fetch User Logs In Batches Tests ====================
 
-    /**
-     * Test successful retrieval of user logs with pagination.
-     * Verifies that paginated logs are returned with proper filtering.
-     */
-    @Test
-    @DisplayName("Fetch User Logs - Success - With pagination and filtering")
-    void fetchUserLogsInBatches_Success() {
-        // Arrange
-        List<UserLog> userLogs = Arrays.asList(testUserLog);
-        Page<UserLog> page = new PageImpl<>(userLogs, PageRequest.of(0, 10), 1);
+    @Nested
+    @DisplayName("fetchUserLogsInBatches Tests")
+    class FetchUserLogsInBatchesTests {
 
-        when(userLogFilterQueryBuilder.getColumnType("action")).thenReturn("string");
-        when(userLogFilterQueryBuilder.findPaginatedEntitiesWithMultipleFilters(
-                eq(TEST_USER_ID),
-                eq(TEST_CARRIER_ID),
-                eq("AND"),
-                anyList(),
-                any(PageRequest.class))).thenReturn(page);
-
-        // Act
-        PaginationBaseResponseModel<UserLogsResponseModel> result = userLogService
-                .fetchUserLogsInBatches(testUserLogsRequest);
-
-        // Assert
-        assertNotNull(result);
-        assertEquals(1, result.getData().size());
-        assertEquals(1L, result.getTotalDataCount());
-        assertEquals(1L, result.getData().get(0).getLogId());
-        assertEquals(TEST_CHANGE, result.getData().get(0).getAction());
-        assertEquals(TEST_OLD_VALUE, result.getData().get(0).getDescription());
-        assertEquals("admin", result.getData().get(0).getCreatedUser());
-
-        verify(userLogFilterQueryBuilder, times(1)).findPaginatedEntitiesWithMultipleFilters(
-                eq(TEST_USER_ID),
-                eq(TEST_CARRIER_ID),
-                eq("AND"),
-                anyList(),
-                any(PageRequest.class));
-    }
-
-    /**
-     * Test fetch user logs with invalid column name.
-     * Verifies that IllegalArgumentException is thrown for invalid column names.
-     */
-    @Test
-    @DisplayName("Fetch User Logs - Failure - Invalid column name")
-    void fetchUserLogsInBatches_InvalidColumnName_ThrowsException() {
-        // Arrange
-        // Set up filters with invalid column
-        PaginationBaseRequestModel.FilterCondition invalidFilter = new PaginationBaseRequestModel.FilterCondition();
-        invalidFilter.setColumn("invalidColumn");
-        invalidFilter.setOperator("equals");
-        invalidFilter.setValue("User Login");
-        testUserLogsRequest.setFilters(List.of(invalidFilter));
-
-        // Act & Assert
-        com.example.SpringApi.Exceptions.BadRequestException exception = assertThrows(
-                com.example.SpringApi.Exceptions.BadRequestException.class,
-                () -> userLogService.fetchUserLogsInBatches(testUserLogsRequest));
-
-        assertTrue(exception.getMessage().contains("Invalid column name: invalidColumn"));
-        verify(userLogFilterQueryBuilder, never()).findPaginatedEntitiesWithMultipleFilters(anyLong(), anyLong(),
-                anyString(), anyList(), any(PageRequest.class));
-    }
-
-    /**
-     * Test fetch user logs with valid column names.
-     * Verifies that each valid column name is accepted.
-     */
-    @Test
-    @DisplayName("Fetch User Logs - Success - Valid column names")
-    void fetchUserLogsInBatches_ValidColumnNames_Success() {
-        // Arrange
-        List<UserLog> userLogs = Arrays.asList(testUserLog);
-        Page<UserLog> page = new PageImpl<>(userLogs, PageRequest.of(0, 10), 1);
-
-        // Mock column types for all columns used in tests
-        when(userLogFilterQueryBuilder.getColumnType("action")).thenReturn("string");
-        when(userLogFilterQueryBuilder.getColumnType("description")).thenReturn("string");
-        when(userLogFilterQueryBuilder.getColumnType("logLevel")).thenReturn("string");
-
-        when(userLogFilterQueryBuilder.findPaginatedEntitiesWithMultipleFilters(anyLong(), anyLong(), anyString(),
-                anyList(), any(PageRequest.class)))
-                .thenReturn(page);
-
-        String[] validColumns = { "action", "description", "logLevel" };
-
-        for (String column : validColumns) {
+        /**
+         * Test successful retrieval of user logs with pagination.
+         */
+        @Test
+        @DisplayName("Fetch User Logs - Success - With Pagination")
+        void fetchUserLogsInBatches_Success() {
             // Arrange
-            PaginationBaseRequestModel.FilterCondition filter = new PaginationBaseRequestModel.FilterCondition();
-            filter.setColumn(column);
-            filter.setOperator("equals");
-            filter.setValue("User Login");
-            testUserLogsRequest.setFilters(List.of(filter));
+            List<UserLog> userLogs = Arrays.asList(testUserLog);
+            Page<UserLog> page = new PageImpl<>(userLogs, PageRequest.of(0, 10), 1);
+
+            when(userLogFilterQueryBuilder.getColumnType("action")).thenReturn("string");
+            when(userLogFilterQueryBuilder.findPaginatedEntitiesWithMultipleFilters(
+                    eq(DEFAULT_USER_ID),
+                    eq(TEST_CARRIER_ID),
+                    eq("AND"),
+                    anyList(),
+                    any(PageRequest.class))).thenReturn(page);
 
             // Act
             PaginationBaseResponseModel<UserLogsResponseModel> result = userLogService
@@ -280,381 +214,187 @@ class UserLogServiceTest {
             // Assert
             assertNotNull(result);
             assertEquals(1, result.getData().size());
+            assertEquals(1L, result.getTotalDataCount());
+            assertEquals(1L, result.getData().get(0).getLogId());
+            assertEquals(TEST_CHANGE, result.getData().get(0).getAction());
+            assertEquals(TEST_OLD_VALUE, result.getData().get(0).getDescription());
+            assertEquals(DEFAULT_CREATED_USER, result.getData().get(0).getCreatedUser());
+
+            verify(userLogFilterQueryBuilder, times(1)).findPaginatedEntitiesWithMultipleFilters(
+                    eq(DEFAULT_USER_ID),
+                    eq(TEST_CARRIER_ID),
+                    eq("AND"),
+                    anyList(),
+                    any(PageRequest.class));
         }
 
-        verify(userLogFilterQueryBuilder, times(validColumns.length)).findPaginatedEntitiesWithMultipleFilters(
-                anyLong(), anyLong(), anyString(), anyList(), any(PageRequest.class));
-    }
+        /**
+         * Test fetch user logs with invalid column name.
+         */
+        @Test
+        @DisplayName("Fetch User Logs - Failure - Invalid Column Name")
+        void fetchUserLogsInBatches_InvalidColumnName_ThrowsBadRequestException() {
+            // Arrange
+            PaginationBaseRequestModel.FilterCondition invalidFilter = new PaginationBaseRequestModel.FilterCondition();
+            invalidFilter.setColumn("invalidColumn");
+            invalidFilter.setOperator("equals");
+            invalidFilter.setValue("User Login");
+            testUserLogsRequest.setFilters(List.of(invalidFilter));
 
-    /**
-     * Test fetch user logs without column name filtering.
-     * Verifies that logs are retrieved when no column filtering is applied.
-     */
-    @Test
-    @DisplayName("Fetch User Logs - Success - Without column filtering")
-    void fetchUserLogsInBatches_Success_WithoutColumnFiltering() {
-        // Arrange
-        // Clear filters for no column filtering
-        testUserLogsRequest.setFilters(null);
+            // Act & Assert
+            BadRequestException exception = assertThrows(
+                    BadRequestException.class,
+                    () -> userLogService.fetchUserLogsInBatches(testUserLogsRequest));
 
-        List<UserLog> userLogs = Arrays.asList(testUserLog);
-        Page<UserLog> page = new PageImpl<>(userLogs, PageRequest.of(0, 10), 1);
+            assertTrue(exception.getMessage().contains("Invalid column name: invalidColumn"));
+            verify(userLogFilterQueryBuilder, never()).findPaginatedEntitiesWithMultipleFilters(anyLong(), anyLong(),
+                    anyString(), anyList(), any(PageRequest.class));
+        }
 
-        when(userLogFilterQueryBuilder.findPaginatedEntitiesWithMultipleFilters(
-                eq(TEST_USER_ID),
-                eq(TEST_CARRIER_ID),
-                eq("AND"),
-                isNull(),
-                any(PageRequest.class))).thenReturn(page);
+        /**
+         * Test fetch user logs with invalid pagination parameters.
+         */
+        @Test
+        @DisplayName("Fetch User Logs - Failure - Invalid Pagination")
+        void fetchUserLogsInBatches_InvalidPagination_ThrowsBadRequestException() {
+            // Arrange
+            testUserLogsRequest.setStart(10);
+            testUserLogsRequest.setEnd(5);
 
-        // Act
-        PaginationBaseResponseModel<UserLogsResponseModel> result = userLogService
-                .fetchUserLogsInBatches(testUserLogsRequest);
+            // Act & Assert
+            BadRequestException exception = assertThrows(
+                    BadRequestException.class,
+                    () -> userLogService.fetchUserLogsInBatches(testUserLogsRequest));
 
-        // Assert
-        assertNotNull(result);
-        assertEquals(1, result.getData().size());
-        assertEquals(1L, result.getTotalDataCount());
+            assertEquals(ErrorMessages.CommonErrorMessages.InvalidPagination, exception.getMessage());
+        }
 
-        verify(userLogFilterQueryBuilder, times(1)).findPaginatedEntitiesWithMultipleFilters(
-                eq(TEST_USER_ID),
-                eq(TEST_CARRIER_ID),
-                eq("AND"),
-                isNull(),
-                any(PageRequest.class));
-    }
+        /**
+         * Test fetch user logs with invalid logic operator.
+         */
+        @Test
+        @DisplayName("Fetch User Logs - Failure - Invalid Logic Operator")
+        void fetchUserLogsInBatches_InvalidLogicOperator_ThrowsBadRequestException() {
+            // Arrange
+            testUserLogsRequest.setLogicOperator("INVALID");
+            when(userLogFilterQueryBuilder.getColumnType("action")).thenReturn("string");
 
-    /**
-     * Test fetch user logs with empty result set.
-     * Verifies that empty pagination response is returned when no logs found.
-     */
-    @Test
-    @DisplayName("Fetch User Logs - Success - Empty result set")
-    void fetchUserLogsInBatches_EmptyResult_ReturnsEmptyPagination() {
-        // Arrange
-        Page<UserLog> emptyPage = new PageImpl<>(new ArrayList<>(), PageRequest.of(0, 10), 0);
+            // Act & Assert
+            BadRequestException exception = assertThrows(
+                    BadRequestException.class,
+                    () -> userLogService.fetchUserLogsInBatches(testUserLogsRequest));
 
-        when(userLogFilterQueryBuilder.getColumnType("action")).thenReturn("string");
-        when(userLogFilterQueryBuilder.findPaginatedEntitiesWithMultipleFilters(
-                eq(TEST_USER_ID),
-                eq(TEST_CARRIER_ID),
-                eq("AND"),
-                anyList(),
-                any(PageRequest.class))).thenReturn(emptyPage);
+            assertTrue(exception.getMessage().contains("Invalid logic operator"));
+        }
 
-        // Act
-        PaginationBaseResponseModel<UserLogsResponseModel> result = userLogService
-                .fetchUserLogsInBatches(testUserLogsRequest);
+        /**
+         * Test fetch user logs with empty result set.
+         */
+        @Test
+        @DisplayName("Fetch User Logs - Success - Empty Result")
+        void fetchUserLogsInBatches_EmptyResult_ReturnsEmptyPagination() {
+            // Arrange
+            Page<UserLog> emptyPage = new PageImpl<>(new ArrayList<>(), PageRequest.of(0, 10), 0);
 
-        // Assert
-        assertNotNull(result);
-        assertTrue(result.getData().isEmpty());
-        assertEquals(0L, result.getTotalDataCount());
+            when(userLogFilterQueryBuilder.getColumnType("action")).thenReturn("string");
+            when(userLogFilterQueryBuilder.findPaginatedEntitiesWithMultipleFilters(
+                    eq(DEFAULT_USER_ID),
+                    eq(TEST_CARRIER_ID),
+                    eq("AND"),
+                    anyList(),
+                    any(PageRequest.class))).thenReturn(emptyPage);
 
-        verify(userLogFilterQueryBuilder, times(1)).findPaginatedEntitiesWithMultipleFilters(
-                eq(TEST_USER_ID),
-                eq(TEST_CARRIER_ID),
-                eq("AND"),
-                anyList(),
-                any(PageRequest.class));
-    }
+            // Act
+            PaginationBaseResponseModel<UserLogsResponseModel> result = userLogService
+                    .fetchUserLogsInBatches(testUserLogsRequest);
 
-    /**
-     * Test fetch user logs with multiple results.
-     * Verifies that multiple logs are properly converted to response models.
-     */
-    @Test
-    @DisplayName("Fetch User Logs - Success - Multiple results")
-    void fetchUserLogsInBatches_MultipleResults_Success() {
-        // Arrange
-        UserLog secondLog = new UserLog(TEST_USER_ID, TEST_CARRIER_ID, "User Logout", null, "logout_success", "admin");
-        secondLog.setLogId(2L);
+            // Assert
+            assertNotNull(result);
+            assertTrue(result.getData().isEmpty());
+            assertEquals(0L, result.getTotalDataCount());
+        }
 
-        List<UserLog> userLogs = Arrays.asList(testUserLog, secondLog);
-        Page<UserLog> page = new PageImpl<>(userLogs, PageRequest.of(0, 10), 2);
+        @Test
+        @DisplayName("Fetch User Logs - Triple Loop Validation")
+        void fetchUserLogsInBatches_TripleLoopValidation() {
+            List<String> validColumns = Arrays.asList(
+                "logId", "userId", "userName", "module", "action",
+                "clientId", "createdAt", "description"
+            );
 
-        when(userLogFilterQueryBuilder.getColumnType("action")).thenReturn("string");
-        when(userLogFilterQueryBuilder.findPaginatedEntitiesWithMultipleFilters(
-                eq(TEST_USER_ID),
-                eq(TEST_CARRIER_ID),
-                eq("AND"),
-                anyList(),
-                any(PageRequest.class))).thenReturn(page);
+            List<String> invalidColumns = Arrays.asList("invalidCol", "dropTable", "select");
 
-        // Act
-        PaginationBaseResponseModel<UserLogsResponseModel> result = userLogService
-                .fetchUserLogsInBatches(testUserLogsRequest);
+            List<String> validOperators = Arrays.asList(
+                "equals", "contains", "startsWith", "endsWith",
+                "greaterThan", "lessThan", "greaterThanOrEqual", "lessThanOrEqual"
+            );
 
-        // Assert
-        assertNotNull(result);
-        assertEquals(2, result.getData().size());
-        assertEquals(2L, result.getTotalDataCount());
-        assertEquals(1L, result.getData().get(0).getLogId());
-        assertEquals(2L, result.getData().get(1).getLogId());
-        assertEquals(TEST_CHANGE, result.getData().get(0).getAction());
-        assertEquals("User Logout", result.getData().get(1).getAction());
+            List<String> invalidOperators = Arrays.asList("invalidOp", "like");
 
-        verify(userLogFilterQueryBuilder, times(1)).findPaginatedEntitiesWithMultipleFilters(
-                eq(TEST_USER_ID),
-                eq(TEST_CARRIER_ID),
-                eq("AND"),
-                anyList(),
-                any(PageRequest.class));
-    }
+            List<String> values = Arrays.asList("test", "123", "2023-01-01");
 
-    // ==================== Additional Validation Tests ====================
+            Page<UserLog> emptyPage = new PageImpl<>(Collections.emptyList());
+            lenient().when(userLogFilterQueryBuilder.findPaginatedEntitiesWithMultipleFilters(
+                    anyLong(), anyLong(), anyString(), anyList(), any(PageRequest.class)))
+                    .thenReturn(emptyPage);
+            lenient().when(userLogFilterQueryBuilder.getColumnType(anyString())).thenReturn("string");
 
-    /**
-     * Test fetch user logs with invalid pagination parameters.
-     * Verifies that BadRequestException is thrown when end <= start.
-     */
-    @Test
-    @DisplayName("Fetch User Logs - Failure - Invalid pagination (end <= start)")
-    void fetchUserLogsInBatches_InvalidPagination_ThrowsBadRequestException() {
-        // Arrange
-        testUserLogsRequest.setStart(10);
-        testUserLogsRequest.setEnd(5);
+            for (String column : validColumns) {
+                for (String operator : validOperators) {
+                    for (String value : values) {
+                        UserLogsRequestModel req = new UserLogsRequestModel();
+                        req.setStart(0);
+                        req.setEnd(10);
+                        req.setUserId(DEFAULT_USER_ID);
+                        req.setCarrierId(TEST_CARRIER_ID);
 
-        // Act & Assert
-        IllegalArgumentException exception = assertThrows(
-                IllegalArgumentException.class,
-                () -> userLogService.fetchUserLogsInBatches(testUserLogsRequest));
+                        PaginationBaseRequestModel.FilterCondition filter = new PaginationBaseRequestModel.FilterCondition();
+                        filter.setColumn(column);
+                        filter.setOperator(operator);
+                        filter.setValue(value);
+                        req.setFilters(Collections.singletonList(filter));
+                        req.setLogicOperator("AND");
 
-        assertNotNull(exception.getMessage());
-    }
+                        assertDoesNotThrow(() -> userLogService.fetchUserLogsInBatches(req));
+                    }
+                }
+            }
 
-    /**
-     * Test fetch user logs with invalid logic operator.
-     * Verifies that BadRequestException is thrown for invalid logic operator.
-     */
-    @Test
-    @DisplayName("Fetch User Logs - Failure - Invalid logic operator")
-    void fetchUserLogsInBatches_InvalidLogicOperator_ThrowsBadRequestException() {
-        // Arrange
-        testUserLogsRequest.setLogicOperator("INVALID");
-        when(userLogFilterQueryBuilder.getColumnType("action")).thenReturn("string");
+            for (String column : invalidColumns) {
+                UserLogsRequestModel req = new UserLogsRequestModel();
+                req.setStart(0);
+                req.setEnd(10);
+                req.setUserId(DEFAULT_USER_ID);
+                req.setCarrierId(TEST_CARRIER_ID);
+                PaginationBaseRequestModel.FilterCondition filter = new PaginationBaseRequestModel.FilterCondition();
+                filter.setColumn(column);
+                filter.setOperator("equals");
+                filter.setValue("val");
+                req.setFilters(Collections.singletonList(filter));
+                req.setLogicOperator("AND");
 
-        // Act & Assert
-        IllegalArgumentException exception = assertThrows(
-                IllegalArgumentException.class,
-                () -> userLogService.fetchUserLogsInBatches(testUserLogsRequest));
+                BadRequestException ex = assertThrows(BadRequestException.class,
+                    () -> userLogService.fetchUserLogsInBatches(req));
+                assertTrue(ex.getMessage().contains("Invalid column name"));
+            }
 
-        assertTrue(exception.getMessage().contains("Invalid logic operator"));
-    }
+            for (String operator : invalidOperators) {
+                UserLogsRequestModel req = new UserLogsRequestModel();
+                req.setStart(0);
+                req.setEnd(10);
+                req.setUserId(DEFAULT_USER_ID);
+                req.setCarrierId(TEST_CARRIER_ID);
+                PaginationBaseRequestModel.FilterCondition filter = new PaginationBaseRequestModel.FilterCondition();
+                filter.setColumn("action");
+                filter.setOperator(operator);
+                filter.setValue("val");
+                req.setFilters(Collections.singletonList(filter));
+                req.setLogicOperator("AND");
 
-    /**
-     * Test log data with null endpoint.
-     * Verifies that logging succeeds with null endpoint.
-     */
-    @Test
-    @DisplayName("Log Data - Success - Null endpoint")
-    void logData_Success_NullEndpoint() {
-        // Arrange
-        when(userLogRepository.save(any(UserLog.class))).thenReturn(testUserLog);
-
-        // Act
-        boolean result = userLogService.logData(TEST_USER_ID, TEST_CHANGE, null);
-
-        // Assert
-        assertTrue(result);
-        verify(userLogRepository).save(any(UserLog.class));
-    }
-
-    /**
-     * Test log data with empty action string.
-     * Verifies that logging succeeds with empty action.
-     */
-    @Test
-    @DisplayName("Log Data - Success - Empty action")
-    void logData_Success_EmptyAction() {
-        // Arrange
-        when(userLogRepository.save(any(UserLog.class))).thenReturn(testUserLog);
-
-        // Act
-        boolean result = userLogService.logData(TEST_USER_ID, "", TEST_ENDPOINT);
-
-        // Assert
-        assertTrue(result);
-        verify(userLogRepository).save(any(UserLog.class));
-    }
-
-    /**
-     * Test fetch user logs with null filters list.
-     * Verifies that logging succeeds without filters.
-     */
-    @Test
-    @DisplayName("Fetch User Logs - Success - Null filters")
-    void fetchUserLogsInBatches_NullFilters_Success() {
-        // Arrange
-        testUserLogsRequest.setFilters(null);
-        List<UserLog> userLogs = Arrays.asList(testUserLog);
-        Page<UserLog> page = new PageImpl<>(userLogs, PageRequest.of(0, 10), 1);
-
-        when(userLogFilterQueryBuilder.findPaginatedEntitiesWithMultipleFilters(
-                eq(TEST_USER_ID),
-                eq(TEST_CARRIER_ID),
-                eq("AND"),
-                isNull(),
-                any(PageRequest.class))).thenReturn(page);
-
-        // Act
-        PaginationBaseResponseModel<UserLogsResponseModel> result = userLogService
-                .fetchUserLogsInBatches(testUserLogsRequest);
-
-        // Assert
-        assertNotNull(result);
-        assertEquals(1, result.getData().size());
-    }
-
-    // ==================== Additional LogData Tests ====================
-
-    @Test
-    @DisplayName("Log Data - Null User ID - Throws BadRequestException")
-    void logData_NullUserId_ThrowsBadRequestException() {
-        testLogDataRequest.setUserId(null);
-        BadRequestException ex = assertThrows(BadRequestException.class,
-                () -> userLogService.logData(testLogDataRequest));
-        assertEquals(ErrorMessages.UserLogErrorMessages.InvalidUserId, ex.getMessage());
-    }
-
-    @Test
-    @DisplayName("Log Data - Negative User ID - Throws BadRequestException")
-    void logData_NegativeUserId_ThrowsBadRequestException() {
-        testLogDataRequest.setUserId(-1L);
-        BadRequestException ex = assertThrows(BadRequestException.class,
-                () -> userLogService.logData(testLogDataRequest));
-        assertEquals(ErrorMessages.UserLogErrorMessages.InvalidUserId, ex.getMessage());
-    }
-
-    @Test
-    @DisplayName("Log Data - Zero User ID - Throws BadRequestException")
-    void logData_ZeroUserId_ThrowsBadRequestException() {
-        testLogDataRequest.setUserId(0L);
-        BadRequestException ex = assertThrows(BadRequestException.class,
-                () -> userLogService.logData(testLogDataRequest));
-        assertEquals(ErrorMessages.UserLogErrorMessages.InvalidUserId, ex.getMessage());
-    }
-
-    @Test
-    @DisplayName("Log Data - Null Action - Throws BadRequestException")
-    void logData_NullAction_ThrowsBadRequestException() {
-        testLogDataRequest.setAction(null);
-        BadRequestException ex = assertThrows(BadRequestException.class,
-                () -> userLogService.logData(testLogDataRequest));
-        assertEquals(ErrorMessages.UserLogErrorMessages.InvalidAction, ex.getMessage());
-    }
-
-    @Test
-    @DisplayName("Log Data - Empty Action - Throws BadRequestException")
-    void logData_EmptyAction_ThrowsBadRequestException() {
-        testLogDataRequest.setAction("");
-        BadRequestException ex = assertThrows(BadRequestException.class,
-                () -> userLogService.logData(testLogDataRequest));
-        assertEquals(ErrorMessages.UserLogErrorMessages.InvalidAction, ex.getMessage());
-    }
-
-    @Test
-    @DisplayName("Log Data - Null Details - Throws BadRequestException")
-    void logData_NullDetails_ThrowsBadRequestException() {
-        testLogDataRequest.setDetails(null);
-        BadRequestException ex = assertThrows(BadRequestException.class,
-                () -> userLogService.logData(testLogDataRequest));
-        assertEquals(ErrorMessages.UserLogErrorMessages.InvalidDetails, ex.getMessage());
-    }
-
-    @Test
-    @DisplayName("Log Data - Null Request Object - Throws BadRequestException")
-    void logData_NullRequest_ThrowsBadRequestException() {
-        BadRequestException ex = assertThrows(BadRequestException.class,
-                () -> userLogService.logData(null));
-        assertEquals(ErrorMessages.UserLogErrorMessages.InvalidRequest, ex.getMessage());
-    }
-
-    // ==================== Additional FetchUserLogs Tests ====================
-
-    @Test
-    @DisplayName("Fetch User Logs - Negative User ID - Throws BadRequestException")
-    void fetchUserLogs_NegativeUserId_ThrowsBadRequestException() {
-        BadRequestException ex = assertThrows(BadRequestException.class,
-                () -> userLogService.fetchUserLogs(-1L, 0, 10, null, null, null));
-        assertEquals(ErrorMessages.UserLogErrorMessages.InvalidUserId, ex.getMessage());
-    }
-
-    @Test
-    @DisplayName("Fetch User Logs - Zero User ID - Throws BadRequestException")
-    void fetchUserLogs_ZeroUserId_ThrowsBadRequestException() {
-        BadRequestException ex = assertThrows(BadRequestException.class,
-                () -> userLogService.fetchUserLogs(0L, 0, 10, null, null, null));
-        assertEquals(ErrorMessages.UserLogErrorMessages.InvalidUserId, ex.getMessage());
-    }
-
-    @Test
-    @DisplayName("Fetch User Logs - Negative Start Index - Throws BadRequestException")
-    void fetchUserLogs_NegativeStartIndex_ThrowsBadRequestException() {
-        BadRequestException ex = assertThrows(BadRequestException.class,
-                () -> userLogService.fetchUserLogs(TEST_USER_ID, -1, 10, null, null, null));
-        assertEquals(ErrorMessages.UserLogErrorMessages.InvalidStartIndex, ex.getMessage());
-    }
-
-    @Test
-    @DisplayName("Fetch User Logs - Negative Page Size - Throws BadRequestException")
-    void fetchUserLogs_NegativePageSize_ThrowsBadRequestException() {
-        BadRequestException ex = assertThrows(BadRequestException.class,
-                () -> userLogService.fetchUserLogs(TEST_USER_ID, 0, -1, null, null, null));
-        assertEquals(ErrorMessages.UserLogErrorMessages.InvalidPageSize, ex.getMessage());
-    }
-
-    @Test
-    @DisplayName("Fetch User Logs - Invalid Sort Column - Throws BadRequestException")
-    void fetchUserLogs_InvalidSortColumn_ThrowsBadRequestException() {
-        BadRequestException ex = assertThrows(BadRequestException.class,
-                () -> userLogService.fetchUserLogs(TEST_USER_ID, 0, 10, "invalidColumn", null, null));
-        assertEquals(ErrorMessages.UserLogErrorMessages.InvalidSortColumn, ex.getMessage());
-    }
-
-    @Test
-    @DisplayName("Fetch User Logs - Large Page Size (1000) - Throws BadRequestException")
-    void fetchUserLogs_LargePageSize_ThrowsBadRequestException() {
-        when(userLogRepository.findByUserId(TEST_USER_ID)).thenReturn(new ArrayList<>());
-        BadRequestException ex = assertThrows(BadRequestException.class,
-                () -> userLogService.fetchUserLogs(TEST_USER_ID, 0, 1000, null, null, null));
-        assertEquals(ErrorMessages.UserLogErrorMessages.PageSizeTooLarge, ex.getMessage());
-    }
-
-    @Test
-    @DisplayName("Fetch User Logs - Empty User Logs - Returns Empty List")
-    void fetchUserLogs_EmptyUserLogs_ReturnsEmptyList() {
-        when(userLogRepository.findByUserId(TEST_USER_ID)).thenReturn(new ArrayList<>());
-        List<UserLog> logs = userLogService.fetchUserLogs(TEST_USER_ID, 0, 10, null, null, null);
-        assertTrue(logs.isEmpty());
-    }
-
-    // ==================== Additional GetUserLog Tests ====================
-
-    @Test
-    @DisplayName("Get User Log - Negative Log ID - Not Found")
-    void getUserLog_NegativeLogId_ThrowsNotFoundException() {
-        when(userLogRepository.findById(-1L)).thenReturn(Optional.empty());
-        NotFoundException ex = assertThrows(NotFoundException.class,
-                () -> userLogService.getUserLog(-1L));
-        assertEquals(ErrorMessages.UserLogErrorMessages.LogNotFound, ex.getMessage());
-    }
-
-    @Test
-    @DisplayName("Get User Log - Zero Log ID - Not Found")
-    void getUserLog_ZeroLogId_ThrowsNotFoundException() {
-        when(userLogRepository.findById(0L)).thenReturn(Optional.empty());
-        NotFoundException ex = assertThrows(NotFoundException.class,
-                () -> userLogService.getUserLog(0L));
-        assertEquals(ErrorMessages.UserLogErrorMessages.LogNotFound, ex.getMessage());
-    }
-
-    @Test
-    @DisplayName("Get User Log - Long.MAX_VALUE Log ID - Not Found")
-    void getUserLog_MaxLongLogId_ThrowsNotFoundException() {
-        when(userLogRepository.findById(Long.MAX_VALUE)).thenReturn(Optional.empty());
-        NotFoundException ex = assertThrows(NotFoundException.class,
-                () -> userLogService.getUserLog(Long.MAX_VALUE));
-        assertEquals(ErrorMessages.UserLogErrorMessages.LogNotFound, ex.getMessage());
+                BadRequestException ex = assertThrows(BadRequestException.class,
+                    () -> userLogService.fetchUserLogsInBatches(req));
+                assertTrue(ex.getMessage().contains("Invalid operator"));
+            }
+        }
     }
 }
